fixed cards overlapping sidenav

--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -70,7 +70,7 @@
 
 // ! mobile version
 .container-for-nav {
-  z-index: -1;
+  z-index: 9999999 !important;
   position: fixed;
   top: 0;
   right: -100%;
